<resources>
    <string name="app_name">Challenge</string>
    <string name="sign_in_title">Sign in</string>
    <string name="sign_in_primary_button">Continue</string>
    <string name="sign_in_username_hint">Username</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_username_error">Username must be longer than two characters</string>
    <string name="sign_in_password_error">Password should consist minimum 6 characters with at least 1 uppercase character, 1 number</string>
    <string name="home_meditations_title">Meditations</string>
    <string name="content_description">TODO</string>
    <string name="home_card_message">Look. Pretty, isn\'t it? Perfectly balanced. As all things should be.</string>
    <string name="home_stories_title">Stories</string>
    <string name="meditation_detail">Meditation Detail</string>
    <string name="story_detail">Story Detail</string>
</resources>